# AdventOfCode

./: .gitignore  Makefile  README.md  aoc.sublime-project
2015/Day09/: main.cpp  notes.txt
2015/Day10/: Makefile  main.cpp
2015/Day11/: Makefile  main.cpp
2015/Day12/: main.cpp  nested.txt
2015/Day13/: Makefile  main.cpp  notes.txt
2015/Level01/: Level01.vcxproj  main.cpp
2015/Level02/: Level02.vcxproj  main.cpp
2015/Level03/: Level03.vcxproj  main.cpp
2015/Level04/: Level04.vcxproj  Level04.vcxproj.filters  main.cpp
2015/Level05/: Level05.vcxproj  Level05.vcxproj.filters  input2.txt  main.cpp
2015/Level06/: Level06.vcxproj  lights.txt  main.cpp
2015/Level07/: Level07.vcxproj  Level07.vcxproj.filters  Makefile  input2.txt  main.cpp  performance.txt
2015/Level08/: Level08.vcxproj  Level08.vcxproj.filters  Makefile  decode.txt  encode.txt  main.cpp
2015/Level09/: Level09.vcxproj  Level09.vcxproj.filters  main.cpp
2016/Level01/: Level01.vcxproj  main.cpp
2016/Level02/: Level02.vcxproj  main.cpp
2016/Level03/: Level03.vcxproj  main.cpp
2016/Level04/: Level04.vcxproj  main.cpp
2016/Level05/: Level05.vcxproj  Level05.vcxproj.filters  main.cpp
2016/Level06/: Level06.vcxproj  main.cpp
2016/Level07/: Level07.vcxproj  Level07.vcxproj.filters  main.cpp
2016/Level08/: main.cpp  (+1 more)
2023/: Cargo.toml  Makefile  README.md
2023/inputs/: day07.0  day07.0.ranked  day07.1  day07.1.ranked  day07.2  day07.2.ranked
2023/src/: lib.rs  utils.rs
2024/: .gitignore  Cargo.toml  Makefile  README.md  template.rs
utils/: macros.h  make.rust  standard.make
(+40 files in other folders)
