[package]
name = "raoc_2023"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01/bin/main.rs"

[[bin]]
name = "day02"
path = "src/day02/bin/main.rs"

[dependencies]
