[package]
name = "raoc_2023"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/utils.rs"

[[bin]]
name = "day01"
path = "src/day01/bin/main.rs"

[[bin]]
name = "day02"
path = "src/day02/bin/main.rs"

[[bin]]
name = "day03"
path = "src/day03/bin/main.rs"

[[bin]]
name = "day04"
path = "src/day04/bin/main.rs"

[dependencies]
regex = "1.10.2"
